<resources>
    <string name="app_name">InsideTowns</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>

    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignInForm">Sign In</string>
    <string name="SignUpFrom">Sign Up</string>
    <string name="Facebook">Facebook</string>
    <string name="Google">Google</string>
    <string name="OR"> OR LOGIN WITH</string>

    <string name="phone">Phone Number</string>

    <string name="cnf">Confirm Password</string>

    <string name="Explore">Explore</string>
    <string name="MyOffers">My Profile</string>
    <string name="Favourite">Favourite</string>

    <string name="DiscoverOffersandPlaces">Discover Offers and Places</string>
    <string name="vip"> VIP Road , Siripuram</string>
    <string name="Exploremore">Explore more</string>

    <string name="GETt">GET 40% OFF ON ALL WOMENS WEAR</string>
    <string name="Fashion">Fashion</string>
    <string name="BeautySpa">Beauty And Spa</string>

    <string name="BeachEvents">Beach Events</string>
    <string name="GetDiscount">Get Discount</string>

    <string name="AppURL">http://theitapp.tech/</string>
    <string name="edit">Edit</string>
    <string name="title_activity_home_right_nav">HomeRightNav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_change_password">Change password</string>
    <string name="cur_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="cnfPwd">Confirm Password</string>

    <string name="alert_password_not_matched">Password not matched</string>

    <string name="alert_current_password">Please Enter current Password</string>
    <string name="alert_confirm_password">Please Enter confirm Password</string>


    <string name="text_take_photo">Take Photo</string>
    <string name="text_choose_from_gallery">Choose from Gallery</string>
    <string name="text_add_photo">Add Photo!</string>
    <string name="text_permission_necessary">Permission necessary</string>
    <string name="text_external_storage_permission_is_necessary">External storage permission is necessary</string>
    <string name="text_select_file">Select File</string>
    <string name="alert_valid_password">Please enter password</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_search">NewSearchActivity</string>

    <string name="facebook_app_id">2509620002452543</string>
    <string name="fb_login_protocol_scheme">fb2509620002452543</string>

</resources>
