<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    android:id="@+id/reLayout"
    android:background="@android:color/transparent"
    android:orientation="vertical"
   >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:paddingRight="@dimen/dimen_10"

        android:layout_gravity="center"
        android:id="@+id/linearLayout2"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="@dimen/dimen_5"
            android:id="@+id/changePwd_no_underline"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_30"

            android:layout_height="wrap_content"
            android:text="Change \nPassword" />
        <LinearLayout
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/curved_bg"


            android:gravity="center"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_gravity="center"
            android:orientation="vertical">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Email"
                android:id="@+id/llpwd"
                android:layout_marginTop="16dp"
                android:weightSum="1"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/fname2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cur_pwd"
                    android:layout_marginStart="16dp"
                    android:lines="1"
                    android:maxLines="1"
                    android:text=""
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:background="@null"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/light_gray"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/lname2"
                   />


            </LinearLayout>

            <View
                android:layout_below="@+id/llpwd"
                android:layout_width="match_parent"
                android:backgroundTint="@color/light_grayy"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:alpha=".8"
                android:background="@drawable/mybutton_curved"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Email"
                android:id="@+id/llpwd2"
                android:layout_marginTop="16dp"
                android:weightSum="1"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/lname2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="10"
                    android:hint="@string/new_pwd"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:background="@null"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/gray"
                    android:textColorHint="@color/light_gray"
                    android:layout_marginStart="16dp"
                    android:layout_below="@+id/llpwd"
                    />


            </LinearLayout>

            <View
                android:layout_below="@+id/lname2"
                android:layout_width="match_parent"
                android:backgroundTint="@color/light_grayy"
                android:layout_height="2dp"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_10"
                android:alpha=".8"
                android:background="@drawable/mybutton_curved"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Email"
                android:id="@+id/llpwd3"
                android:layout_marginTop="16dp"
                android:weightSum="1"
                android:orientation="horizontal"
                >
                <EditText
                    android:id="@+id/email2"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cnfPwd"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:background="@null"
                    android:maxLines="1"
                    android:text=""
                    android:maxLength="10"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/light_gray"
                    android:layout_marginStart="16dp"
                    android:layout_below="@+id/lname2"
                    />


            </LinearLayout>


            <View
                android:layout_below="@+id/email2"
                android:layout_width="match_parent"
                android:backgroundTint="@color/light_grayy"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_10"
                android:alpha=".8"
                android:background="@drawable/mybutton_curved"
                />




        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="Save"

            android:background="@drawable/curved_bg"
            android:textColor="@color/black"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_10"/>
    </LinearLayout>





</RelativeLayout>